# cube

./: CMakeLists.txt  shaders.qrc  textures.qrc
include/: Camera.hpp  mainwidget.h
res/: vshader.glsl
src/: mainwidget.cpp
